[gd_scene load_steps=7 format=3 uid="uid://5n7183hj6uul"]

[ext_resource type="Script" path="res://slime.gd" id="1_lspuh"]
[ext_resource type="Texture2D" path="res://sprites/slime_stand_01.png" id="1_puvp4"]
[ext_resource type="Texture2D" path="res://sprites/slime_stand_02.png" id="2_p306r"]
[ext_resource type="Texture2D" path="res://sprites/slime_stand_03.png" id="3_g0h67"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xtkyn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_puvp4")
}, {
"duration": 1.0,
"texture": ExtResource("2_p306r")
}, {
"duration": 1.0,
"texture": ExtResource("3_g0h67")
}, {
"duration": 1.0,
"texture": ExtResource("2_p306r")
}],
"loop": true,
"name": &"stand",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3bhah"]
radius = 30.0

[node name="slime" type="CharacterBody2D" groups=["inimigo"]]
script = ExtResource("1_lspuh")

[node name="anim" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -37)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_xtkyn")
animation = &"stand"
autoplay = "stand"
frame_progress = 0.541337

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -30)
shape = SubResource("CircleShape2D_3bhah")

[node name="ray_dir" type="RayCast2D" parent="."]
position = Vector2(0, -33)
target_position = Vector2(40, 0)

[node name="ray_esq" type="RayCast2D" parent="."]
position = Vector2(0, -33)
target_position = Vector2(-40, 0)

[node name="ray_chao_dir" type="RayCast2D" parent="."]
position = Vector2(38, -33)
target_position = Vector2(0, 40)

[node name="ray_chao_esq" type="RayCast2D" parent="."]
position = Vector2(-35, -33)
target_position = Vector2(0, 40)
